<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.aymen.projet.Aide">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView
            android:layout_gravity="center"
            android:id="@+id/appNameStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Définition:"
            android:textColor="@color/white"
            android:background="@color/blue"
            style="@style/AppNameStartScreen" />
        <TextView
            android:textSize="18.0sp"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:id="@+id/appAboutText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:text="@string/text"
            android:layout_weight="20.84" />

        <TextView
            android:textSize="18.0sp"
            android:textColor="@color/text_primary"
            android:gravity="center_horizontal"
            android:id="@+id/source"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:text="@string/t"
            android:layout_weight="20.84"
            android:paddingBottom="10dp"/>
        <TextView
            android:layout_gravity="center"
            android:id="@+id/faire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Comment faire le test:"
            android:textColor="@color/white"
            android:background="@color/blue"
            style="@style/AppNameStartScreen" />
        <TextView
            android:textSize="18.0sp"
            android:text="@string/help11Description"
            style="@style/simpleTextStyle" />
        <TextView
            android:textSize="18.0sp"
            android:text="@string/help11Description1"
            style="@style/simpleTextStyle" />
        <TextView
            android:textSize="18.0sp"
            android:text="@string/help11Description2"
            style="@style/simpleTextStyle" />

        </LinearLayout>

</ScrollView>
